# SportWear_Manager

./: .gitignore  .gitmodules  CMakeLists.txt  ElaWidgetTools_CustomClasses.md  README.md  temp.md
src/: main.cpp
src/app/: appContext.h  eventHandler.cpp  eventHandler.h  eventProvider.h  repositoryProvider.cpp  repositoryProvider.h  serviceProvider.h
src/controller/: adminController.h  authController.h  cartController.h  orderController.h  productController.h
src/database/: databaseManager.cpp  databaseManager.h  schema.sql
src/database/repository/: cartRepository.cpp  cartRepository.h  inventoryRepository.cpp  inventoryRepository.h  orderRepository.cpp  orderRepository.h  paymentRepository.cpp  paymentRepository.h  productRepository.cpp  productRepository.h  receiptRepository.cpp  receiptRepository.h  repositoryBase.h  reviewRepository.cpp  reviewRepository.h  userRepository.cpp  userRepository.h  wishRepository.cpp  wishRepository.h  wishlistRepository.cpp  wishlistRepository.h
src/model/: actions.h  eventType.h  review.cpp  review.h
src/model/cart/: cart.cpp  cart.h  cartItem.cpp  cartItem.h
src/model/order/: delivery.cpp  delivery.h  order.cpp  order.h  orderItem.cpp  orderItem.h  receipt.cpp  receipt.h
src/model/product/: cart.cpp  cart.h  cartAction.h  cartItem.h  category.cpp  category.h  inventory.cpp  inventory.h  item.h  order.h  orderItem.h  pointAction.h  product.cpp  product.h  productItem.h  receipt.cpp  receipt.h  wish.h
src/model/ui/: cartPageContent.h  cartWidgetContent.h  orderPanelContent.h  pageNavigationContent.h  productPageContent.h  receiptPageContent.h  reviewContent.h  userInfo.h  wishPageContent.h
src/model/user/: admin.cpp  admin.h  guest.cpp  guest.h  sessionInfo.h  user.cpp  user.h  userBase.cpp  userBase.h  userInfo.cpp  userInfo.h
src/resources/: appResources.qrc
src/service/: accountService.cpp  accountService.h  cartService.cpp  cartService.h  inventoryService.cpp  inventoryService.h  loginService.cpp  loginService.h  orderService.cpp  orderService.h  pageService.cpp  pageService.h  pointService.cpp  pointService.h  productDisplayService.h  productService.cpp  productService.h  refundService.cpp  refundService.h  reviewService.cpp  reviewService.h  searchService.cpp  searchService.h  signupService.cpp  signupService.h  uiService.cpp  uiService.h  wishService.cpp  wishService.h  wishlistService.cpp  wishlistService.h
src/ui/: dialog.cpp  dialog.h  mainwindow.cpp  mainwindow.h  messageBar.cpp  messageBar.h
src/ui/common/: dialog.h  messageBar.cpp  tableItemUtil.h
src/ui/components/: indexNavigation.cpp  indexNavigation.h  messageBar.cpp  messageBar.h  productCard.cpp  productCard.h
src/ui/page/: alertDialog.cpp  alertDialog.h  cartPage.cpp  cartPage.h  indexNavigation.cpp  loginPage.cpp  loginPage.h  orderPage.cpp  orderPage.h  orderPanel.cpp  orderPanel.h  productCard.cpp  productDetailPage.cpp  productDetailPage.h  productGridPage.cpp  productGridPage.h  productPage.cpp  productPage.h  profilePanel.cpp  profilePanel.h  receiptPage.cpp  receiptPage.h  reviewPage.cpp  reviewPage.h  settingPanel.cpp  settingPanel.h  sidePanel.h  topAppBar.h  wishPage.cpp  wishPage.h
src/ui/page/cart/: cartList.h  cartPage.cpp  cartPage.h  cartWidget.cpp  cartWidget.h
src/ui/page/profile/: formPanelLayout.h  formPanelWidget.cpp  formPanelWidget.h  formWidget.cpp  formWidget.h  loginPanel.cpp  loginPanel.h  loginPanelLayout.h  logoutDialog.h  logoutPanel.cpp  logoutPanel.h  logoutPanelWidget.h  signUpPanelLayout.h  signupPanel.h  userPanel.cpp  userPanel.h  userProfilePanelLayout.h
src/ui/pages/cart/: cartPage.cpp  cartPage.h  cartWidget.cpp  cartWidget.h
src/ui/pages/order/: orderPanel.cpp  orderPanel.h  receiptPage.cpp  receiptPage.h
src/ui/pages/product/: productDetailPage.cpp  productDetailPage.h  productEditPage.cpp  productEditPage.h  productGridPage.cpp  productGridPage.h  productPages.cpp  productPages.h
src/ui/pages/profile/: profilePanel.cpp  profilePanel.h
src/ui/pages/profile/widgets/: loginPanel.cpp  logoutPanel.h  signupPanel.cpp  userPanel.cpp  userPanel.h
src/ui/pages/settings/: settingPanel.cpp
src/ui/pages/wish/: wishPage.cpp  wishPage.h
src/ui/panels/profile/: profilePanel.cpp
src/ui/panels/profile/widgets/: formWidget.cpp  formWidget.h
src/ui/panels/settings/: settingPanel.h
src/ui/windows/: mainwindow.cpp  mainwindow.h
